--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 ################################### Default Configuration ############################
 baseurl = "http://examplesite.com/"
 title = "Vex | hugo landing page template"
-theme = "vex-hugo"
+theme = "livemart-vex-hugo"
 # post excert
 summarylength = "20"
 # google analytics
