--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 ################################### Default Configuration ############################
-baseurl = "https://demo-hugo.livemart.xyz"
-appendPort = false
+baseurl = "http://localhost"
+# appendPort = false
 title = "LiveMart Vex | hugo landing page template"
 theme = "livemart-vex-hugo"
 # post excert
