--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     image: livemart-vex-hugo:latest
     ports:
       - 1313:1313
-    command: [ "hugo", "server", "--themesDir", "../..", "--baseUrl=https://demo-hugo.livemart.xyz", "--appendPort=false" ]
+    entrypoint: [ "hugo", "server", "--themesDir", "../..", "--baseUrl=https://demo-hugo.livemart.xyz", "--appendPort=false" ]
     working_dir: "/root/projects/livemart-vex-hugo/exampleSite"
