--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.1'
 
 services:
   livemart-vex-hugo:
-    image: livemart-vex-hugo:latest
+    image: registry.gitlab.com/livemart/livemart-vex-hugo:0.0.1
     ports:
       - 1313:1313
-    entrypoint: [ "hugo", "server", "--themesDir", "../..", "--baseUrl=https://demo-hugo.livemart.xyz", "--appendPort=false" ]
+    entrypoint: [ "hugo", "server", "--themesDir", "../..", "--baseUrl=https://demo-vex-hugo.livemart.xyz", "--appendPort=false" ]
     working_dir: "/root/projects/livemart-vex-hugo/exampleSite"
